# GossipProtocols

./: LICENSE  LICENSE.md  README.md
RandomizedRumorSpreading/: CMakeLists.txt  README.md  main.cpp
RandomizedRumorSpreading/libRumorSpreading/: MemberID.h  Message.cpp  Message.h  NetworkConfig.cpp  NetworkConfig.h  RumorMember.cpp  RumorMember.h  RumorSpreadingInterface.h  RumorStateMachine.cpp  RumorStateMachine.h
RandomizedRumorSpreading/test/: CMakeLists.txt
RandomizedRumorSpreading/test/unit_tests/: CMakeLists.txt  Sim.h  TestProtocol.cpp  TestProtocol.h  TestSystem.cpp
RandomizedRumorSpreading/test/unit_tests/protocol/: CMakeLists.txt  TestProtocol.cpp  TestProtocol.h
RandomizedRumorSpreading/test/unit_tests/sim/: CMakeLists.txt  Sim.cpp  TestSystem.cpp
